<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorGrayLigth"
        android:gravity="center|start"
        android:paddingStart="15dp"
        android:text="@string/title_datos_cliente"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_above="@+id/btnNext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp">

            <EditText
                android:id="@+id/inputName"
                style="@style/FormTextInput"
                android:hint="@string/hint_nombre_apellido"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputPhone"
                style="@style/FormTextInput"
                android:hint="@string/hint_telefono_celular"
                android:inputType="phone" />

            <EditText
                android:id="@+id/inputEmail"
                style="@style/FormTextInput"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/inputCompany"
                style="@style/FormTextInput"
                android:hint="@string/hint_empresa"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputDescription"
                style="@style/FormTextAreaInput"
                android:hint="@string/hint_descripcion"
                android:inputType="text" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnNext"
        style="@style/FormButton"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_siguiente"/>

</RelativeLayout>
